# host-error-monitor

./: CMakeLists.txt  example_config.json  groups  meson.build  meson.options  project.config
include/: error_monitors.hpp  host_error_monitor.hpp
include/error_monitors/: base_cpu_monitor.hpp  base_gpio_monitor.hpp  base_gpio_poll_monitor.hpp  base_monitor.hpp  base_poll_monitor.hpp  caterr_monitor.hpp  cpld_crc_monitor.hpp  cpu1_mismatch_monitor.hpp  cpu2_mismatch_monitor.hpp  cpu_early_error_monitor.hpp  cpu_mismatch_monitor.hpp  cpu_presence_monitor.hpp  cpu_thermtrip_monitor.hpp  err2_monitor.hpp  err_pin_monitor.hpp  err_pin_timeout_monitor.hpp  ierr_monitor.hpp  mcerr_monitor.hpp  mem_thermtrip_monitor.hpp  memhot_monitor.hpp  pch_thermtrip_monitor.hpp  prochot_monitor.hpp  register_monitor.hpp  smi_monitor.hpp  vr_hot_monitor.hpp
service_files/: meson.build
src/: host_error_monitor.cpp
tests/: meson.build
